# sports-ai-bot

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
src/sports_ai_bot/: __init__.py  main.py
src/sports_ai_bot/bot/: __init__.py  telegram_bot.py
src/sports_ai_bot/collect/: api_football.py  fixtures.py  historical.py  odds.py  the_odds_api.py
src/sports_ai_bot/evaluate/: performance.py
src/sports_ai_bot/explain/: __init__.py  messages.py
src/sports_ai_bot/features/: build.py
src/sports_ai_bot/predict/: pipeline.py
src/sports_ai_bot/research/: corners.py
src/sports_ai_bot/train/: train_models.py
src/sports_ai_bot/utils/: config.py  logging.py  team_names.py
tests/: test_api_football.py  test_config.py  test_corners_research.py  test_forebet.py  test_messages.py  test_performance.py  test_predict_pipeline.py  test_sources.py  test_telegram_bot.py  test_value_picks.py
