[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-ai-bot"
version = "0.1.0"
description = "Telegram bot for football Over 2.5 and BTTS predictions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "joblib>=1.4.2",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "pydantic-settings>=2.2.1",
  "python-telegram-bot[job-queue]>=21.2",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
